[package]
name = "nowar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.7"
log = "0.4"
env_logger = "0.9.0"
threadpool = "1.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0.136"
rand = "0.8"
cached = "0.34.0"
